2019-1/230/users/4054/executions/1599_1017.log
== TEST (2019-03-27 16:43:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input()))
t2 = radians(float(input))
g2 = radians(float(input))
d = R * acos(sin(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    t2 = radians(float(input))
TypeError: float() argument must be a string or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:44:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))
d = R * acos(sin(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = R * acos(sin(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:45:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))
R = 6371.01
d = R * acos(sin(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))

-- EXECUTION TIME:
0.12222
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1599/1017/main.py", line 10, in <module>
    d = R * acos(sin(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'sen' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:45:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))
R = 6371.01
d = R * acos(sin(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R * acos(sin(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:46:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))
R = 6371.01
d = R * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

-- EXECUTION TIME:
0.171651
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:47:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))
R = 6371.01
d = R * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R * acos(sin(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:48:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))
R = 6371.01
d = R * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R * acos(sin(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:49:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))
R = 6371.01
d = R * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

-- EXECUTION TIME:
0.130771
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:50:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))
R = 6371.01
d = R * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R * acos(sin(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 16:51:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))
R = 6371.01
d = R * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = R * acos(sin(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:53:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))
R = 6371.01
d = R * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(d)

-- EXECUTION TIME:
0.135563
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.43792028752357
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:54:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))
R = 6371.01
d = R * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print((round(d, 2)))

-- EXECUTION TIME:
0.2676
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 16:56:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input()))
t2 = radians(float(input()))
g2 = radians(float(input()))
R = 6371.01
d = R * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print((round(d, 2)))

-- EXECUTION TIME:
0.155559
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
